Fixed issue with nav overlapping hero on load

--- a/src/styles/partials/_body.scss
+++ b/src/styles/partials/_body.scss
@@ -22,6 +22,9 @@ main {
 .mainContent {
     margin: 0 0 15vh;
     flex: 1;
+    .hasHero & {
+        margin: 5rem 0 15vh;
+    }
 }
 
 .container {
